k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-es-api
  namespace: pg-es-sync
spec:
  selector:
    app: pg-es-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
